created login, nav, signup and home components'

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -22,7 +22,7 @@ padding-right: 130px;
 
 .nav-flex{
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   margin-top: 5px;
 }
 
