--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -28,14 +28,25 @@ hr{
   text-decoration: underline;
 }
 
-.job-details{
+.job-details-div{
+  position: sticky;
+  top: 65px;
+  width: 100%;
+  max-height: 700px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding-left: 30px; 
+}
+
+.description-div{
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  position: sticky;
-  top: 40px;
-  max-height: 700px;
-  padding: 30px;
+  align-items: start;
   overflow-y: scroll;
+}
+
+button{
+  margin-top: 30px;
 }
