--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -8,6 +8,7 @@
 .job-title{
   width: 50%;
   min-width: 50%;
+  max-height: 100%;
   border-right: 1.5px solid rgba(0, 0, 0, 0.304);
 }
 
@@ -22,9 +23,11 @@ hr{
   align-items: flex-start;
   width: 100%;
   cursor: pointer;
+  word-break: break-all;
+  padding-top: 20px;
 }
 
-.card:hover .title{
+.card:hover{
   text-decoration: underline;
 }
 
@@ -37,6 +40,7 @@ hr{
   flex-direction: column;
   align-items: start;
   padding-left: 30px; 
+  word-break: break-all;
 }
 
 .description-div{
@@ -49,4 +53,78 @@ hr{
 
 button{
   margin-top: 30px;
+}
+
+.timestamp{
+font-size: 12px;
+font-style: italic;
+}
+
+.title{
+  font-size: 1.6rem;
+  display: -webkit-box;
+  max-width: 670px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.pay{
+  font-weight:bold
+}
+
+.location-div{
+  margin-bottom: 5px;
+}
+
+.p-title{
+  font-size: 2rem;
+}
+
+.msg-btn{
+  margin-right: 15px;
+  padding: 5px 25px;
+  font-size: 1.2rem;
+  border-radius: 60px;
+  border: 1px solid rgb(91, 150, 233);;
+  cursor: pointer;
+  background-color: rgb(91, 150, 233);
+  color: white;
+}
+
+.msg-btn:hover{
+  cursor: pointer;
+  opacity: .75;
+}
+
+.user-pic{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.div-profile{
+  display: flex;
+  align-items: center;
+}
+
+.div-username{
+  margin-top: 5px;
+  width: 88%;
+  margin-left: 10px;
+  line-height: 0px;
+}
+
+.p-username{
+  align-self:flex-end;
+  font-size:18px;
+}
+
+.p-joineddate{
+  font-size: 12px;
+}
+
+.p-pay{
+  font-weight: 500;
 }
