--- a/client/src/components/JobForm/JobForm.css
+++ b/client/src/components/JobForm/JobForm.css
@@ -6,3 +6,14 @@
   display: flex;
   flex-direction: column;
 }
+
+.listjob-btn{
+  border: none;
+  background-color: rgb(91, 150, 233);
+  color: #fff;
+  font-size: 15px;
+}
+
+.listjob-btn:hover{
+  text-decoration: underline;
+}
