--- a/client/src/components/LogIn/LogIn.css
+++ b/client/src/components/LogIn/LogIn.css
@@ -1,6 +1,7 @@
 .log-in{
-  color: #fff;
+  color: white;
   cursor: pointer;
+  margin-top: 48px;
 }
 
 .log-in:hover{
@@ -12,7 +13,7 @@
   background-color: white;
   border-radius: 5px;
   width: 400px;
-  height: 470px;
+  height: 480px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,6 +31,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  margin-bottom: 80px
 }
 
 .credentials-form{
@@ -43,17 +45,64 @@
   width: 300px;
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.635);
+  padding-left: 5px;
+}
+
+.text::placeholder{
+  font-size: 18px;
 }
 
 .sign-up-div{
+  display: flex;
+  align-items:baseline;
   margin-top: 40px;
 }
 
 .logIn-btn{
-  width: 150px;
+  padding: 3px 35px;
+  font-size: 1.2rem;
+  border-radius: 60px;
+  border: 1px solid rgb(91, 150, 233);;
+  cursor: pointer;
+  background-color: rgb(91, 150, 233);
+  color: white;
   margin-top: 10px;
 }
+
+.logIn-btn:hover{
+  cursor: pointer;
+  opacity: .75;
+}
+
 .login-title{
-  font-size: 2rem;
+  font-size: 2.5rem;
   margin-bottom: 30px;
+}
+
+.exitlogin-div{
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+}
+
+.exit-login{
+position: relative;
+right: 3px;
+top: -0px;
+font-size: 20px;
+border:none;
+background-color: white;
+cursor: pointer;
+}
+
+.exit-login:hover{
+  text-decoration: underline;
+}
+
+.div-errormsg{
+  color: red;
+  display: flex;
+  justify-content: center;
+  height: 20px;
+  width: 100%;
 }
