--- a/client/src/components/SavedJobs/SavedJobs.css
+++ b/client/src/components/SavedJobs/SavedJobs.css
@@ -33,7 +33,7 @@
 .p-saved-jobs{
   text-align: center;
   font-size: 2.5rem;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .p-job-title{
@@ -43,4 +43,9 @@
 
 .p-job-date{
   color: rgb(107, 106, 106);
+}
+
+.hr-jobs{
+  border-top: 1px solid rgb(192, 192, 192);
+
 }
