--- a/client/src/screens/SavedJobs/SavedJobs.css
+++ b/client/src/screens/SavedJobs/SavedJobs.css
@@ -49,3 +49,10 @@
   border-top: 1px solid rgb(192, 192, 192);
 
 }
+
+.p-no-jobs{
+  font-size: 30px;
+  text-align: center;
+  margin-top: 100px;
+  color: rgb(151, 148, 148);
+}
